# pybio-utils

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py
bio_utils/: bam_utils.py  bed_utils.py  fastx_utils.py  gtf_utils.py  star_utils.py
bio_utils/bio_programs/: bam_to_wiggle.py  bed_to_bigBed.py  count_aligned_reads.py  count_reads.py  create_init_ribo_track.py  create_mygene_report.py  get_all_utrs.py  get_read_length_distribution.py  gtf_to_bed12.py  parse_meme_names.py  run_signalp.py  run_tmhmm.py
bio_utils/bio_programs/plotting/: plot_read_length_distribution.py
docs/: bio.html  bio.md  usage-instructions.md
pbio/misc/: latex.py  mpl_utils.py  pandas_utils.py  parallel.py  shell_utils.py  slurm.py  utils.py
pbio/misc/pgrms/: pickle_stan.py
pbio/ribo/: ribo_filenames.py  ribo_utils.py
pbio/ribo/pgrms/: estimate_metagene_profile_bayes_factors.py  extract_metagene_profiles.py  select_periodic_offsets.py
pbio/utils/: bam_utils.py  bed_utils.py  bio.py  fastx_utils.py  gffread_utils.py  gtf_utils.py  meme_utils.py  metacyc_utils.py  mygene_utils.py  pgrm_utils.py  pyensembl_utils.py
pbio/utils/pgrms/: bam_to_wiggle.py  bed12_to_gtf.py  bed_to_bigBed.py  bedx_to_bedy.py  calculate_bed_overlap.py  convert_ccds_to_bed.py  count_aligned_reads.py  count_reads.py  create_init_ribo_track.py  create_mygene_report.py  dna_to_aa.py  download_srr_files.py  extract_bed_sequences.py  extract_cds_coordinates.py  fasta_to_fastq.py  fastq_pe_dedupe.py  filter_bam_by_ids.py  fix_all_bed_files.py  get_all_utrs.py  get_read_length_distribution.py  gtf_to_bed12.py  join_long_chromosomes.py  merge_isoforms.py  parse_meme_names.py  remove_duplicate_bed_entries.py  remove_duplicate_sequences.py  remove_multimapping_reads.py  reorder_fasta.py  run_bowtie.py  run_signalp.py  run_tmhmm.py  split_bed12_blocks.py  split_long_chromosomes.py  subtract_bed.py
pbio/utils/pgrms/plotsc/: create_aligned_read_count_bar_chart.py  plot_read_length_distribution.py
