[metadata]
name = pbio
description = "Miscellaneous bioinformatics and other supporting utilities for Python 3"
long-description = file: README.md
version = 1.0.0
url = https://github.com/dieterich-lab/pybio-utils
author = Brandon Malone
maintainer = Etienne Boileau
maintainer-email = boileau@uni-heidelberg.de
license = MIT
keywords = bioinformatics, riboseq
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.0

[options]
packages = find:
# see requirements.txt for pinned versions
install_requires =
    dask # for future development, avoid pinning version (must match distributed)
    sklearn
    appdirs
    tqdm
    mygene
    openpyxl
    fastparquet
    more_itertools
    matplotlib
    matplotlib_venn
    seaborn
python_requires = >=3.6,<3.7.0a0
test_suite =
    nose.collector
tests_require =
    nose
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    # utils
    bam-to-wiggle = pbio.utils.pgrms.bam_to_wiggle:main
    bedx-to-bedy = pbio.utils.pgrms.bedx_to_bedy:main
    bed-to-bigBed = pbio.utils.pgrms.bed_to_bigBed:main
    bed12-to-gtf = pbio.utils.pgrms.bed12_to_gtf:main
    calculate-bed-overlap = pbio.utils.pgrms.calculate_bed_overlap:main
    convert-ccds-to-bed = pbio.utils.pgrms.convert_ccds_to_bed:main
    count-aligned-reads = pbio.utils.pgrms.count_aligned_reads:main
    count-reads = pbio.utils.pgrms.count_reads:main
    create-aligned-read-count-bar-chart = pbio.utils.pgrms.plotsc.create_aligned_read_count_bar_chart:main
    create-mygene-report = pbio.utils.pgrms.create_mygene_report:main
    create-init-ribo-track = pbio.utils.pgrms.create_init_ribo_track:main
    dna-to-aa = pbio.utils.pgrms.dna_to_aa:main
    download-srr-files = pbio.utils.pgrms.download_srr_files:main
    extract-bed-sequences = pbio.utils.pgrms.extract_bed_sequences:main
    extract-cds-coordinates = pbio.utils.pgrms.extract_cds_coordinates:main
    fasta-to-fastq = pbio.utils.pgrms.fasta_to_fastq:main
    fastq-pe-dedupe = pbio.utils.pgrms.fastq_pe_dedupe:main
    filter-bam-by-ids = pbio.utils.pgrms.filter_bam_by_ids:main
    fix-all-bed-files = pbio.utils.pgrms.fix_all_bed_files:main
    get-all-utrs = pbio.utils.pgrms.get_all_utrs:main
    get-read-length-distribution = pbio.utils.pgrms.get_read_length_distribution:main
    gtf-to-bed12 = pbio.utils.pgrms.gtf_to_bed12:main
    join-long-chromosomes = pbio.utils.pgrms.join_long_chromosomes:main
    merge-isoforms = pbio.utils.pgrms.merge_isoforms:main
    parse-meme-names = pbio.utils.pgrms.parse_meme_names:main
    plot-read-length-distribution = pbio.utils.pgrms.plotsc.plot_read_length_distribution:main
    remove-duplicate-bed-entries = pbio.utils.pgrms.remove_duplicate_bed_entries:main
    remove-duplicate-sequences = pbio.utils.pgrms.remove_duplicate_sequences:main
    remove-multimapping-reads = pbio.utils.pgrms.remove_multimapping_reads:main
    reorder-fasta = pbio.utils.pgrms.reorder_fasta:main
    run-bowtie = pbio.utils.pgrms.run_bowtie:main
    run-signalp = pbio.utils.pgrms.run_signalp:main
    run-tmhmm = pbio.utils.pgrms.run_tmhmm:main
    split-bed12-blocks = pbio.utils.pgrms.split_bed12_blocks:main
    split-long-chromosomes = pbio.utils.pgrms.split_long_chromosomes:main
    subtract-bed = pbio.utils.pgrms.subtract_bed:main
    # ribo
    extract-metagene-profiles = pbio.ribo.pgrms.extract_metagene_profiles:main
    estimate-metagene-profile-bayes-factors = pbio.ribo.pgrms.estimate_metagene_profile_bayes_factors:main
    select-periodic-offsets = pbio.ribo.pgrms.select_periodic_offsets:main
    # misc
    pickle-stan = pbio.misc.pgrms.pickle_stan:main

# config for test integration
# [nosetests]

# sphinx integration with setuptools
# [build_sphinx]
